<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2023 CNM Ingenuity, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">

  <!--  DO NOT add an app_name property when using this starter template; it is created automatically.-->
  <!--  <string name="app_name">App Starter</string>-->

  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="sign_out">Sign out</string>

  <string name="local_display_name_hint">Local Display Name</string>
  <string name="google_display_name_hint">Google Display Name</string>
  <string name="bearer_token_hint">Bearer Token</string>
  <string name="permissions_granted_hint">Permissions Granted</string>

  <string name="permissions_dialog_title">Permissions Needed</string>
  <string name="settings_label">Settings</string>

  <string name="access_fine_location_explanation" tools:keep="@string/access_fine_location_explanation">This app uses location information for …</string>
  <string name="access_coarse_location_explanation" tools:keep="@string/access_coarse_location_explanation">This app uses location information for …</string>
  <string name="post_notifications_explanation" tools:keep="@string/access_post_notifications_explanation">This app uses notifications for …</string>
  <string name="selectable_text_pref_key">selectable_text_pref</string>
  <string name="selectable_text_pref_title">Selectable text</string>
  <string name="selectable_text_pref_summary_on">Uneditable text is selectable.</string>
  <string name="selectable_text_pref_summary_off">Uneditable text is not selectable.</string>
  <string name="playing_field_width_key">playing_field_width</string>
  <string name="playing_field_width_title">Playing field width</string>

  <string name="game_dummy_text">Game fragment</string>
  <string name="scores_dummy_text">Scores fragment</string>
  <string name="game_fragment_label">Tetris</string>
  <string name="scores_fragment_label">High Scores</string>
  <string name="scores_label">Scores</string>
  <string name="game_label">Game</string>
  <string name="move_left">Move left</string>
  <string name="move_right">Move right</string>
  <string name="rotate_left">Rotate left</string>
  <string name="drop">Drop</string>
  <string name="rotate_right">Rotate right</string>
  <string name="current_level">Level</string>
  <string name="current_rows_removed">Current rows</string>
  <string name="score">Score</string>
  <string name="game_over">Game Over!</string>
  <string name="final_score_format">Score: %,d</string>
  <string name="high_scores">High scores</string>
  <string name="ranking_header">#</string>
  <string name="display_name_header">Player</string>
  <string name="score_header">Score</string>
  <string name="rows_removed_header">Rows</string>
  <string name="created_header">Date</string>
  <string name="run">Run</string>
  <string name="pause">Pause</string>
  <string name="new_game">New game</string>

</resources>