<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_dynamic_spacing"
  tools:context=".controller.GameFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/vertical_guideline"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintGuide_percent="0.75"/>

  <edu.cnm.deepdive.tetris.view.PlayingFieldView
    android:id="@+id/playing_field"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:stretchMode="columnWidth"
    app:layout_constraintVertical_chainStyle="packed"
    app:layout_constraintWidth_percent="0.75"
    app:layout_constraintBottom_toTopOf="@id/drop"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/vertical_guideline"
    app:layout_constraintTop_toTopOf="parent"/>

  <ImageButton
    android:id="@+id/move_left"
    android:layout_width="@dimen/image_button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/move_left"
    android:tooltipText="@string/move_left"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintTop_toTopOf="@id/drop"
    app:layout_constraintBottom_toBottomOf="@id/drop"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/rotate_left"
    tools:ignore="ContentDescription"/>

  <ImageButton
    android:id="@+id/rotate_left"
    android:layout_width="@dimen/image_button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/rotate_left"
    android:tooltipText="@string/rotate_left"
    app:layout_constraintTop_toTopOf="@id/drop"
    app:layout_constraintBottom_toBottomOf="@id/drop"
    app:layout_constraintLeft_toRightOf="@id/move_left"
    app:layout_constraintRight_toLeftOf="@id/drop"
    tools:ignore="ContentDescription"/>

  <ImageButton
    android:id="@+id/drop"
    android:layout_width="@dimen/image_button_size"
    android:layout_height="wrap_content"
    android:src="@drawable/drop"
    android:tooltipText="@string/drop"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toBottomOf="@id/playing_field"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/rotate_left"
    app:layout_constraintRight_toLeftOf="@id/rotate_right"
    tools:ignore="ContentDescription"/>

  <ImageButton
    android:id="@+id/rotate_right"
    android:layout_width="@dimen/image_button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/rotate_right"
    android:tooltipText="@string/rotate_right"
    app:layout_constraintTop_toTopOf="@id/drop"
    app:layout_constraintBottom_toBottomOf="@id/drop"
    app:layout_constraintLeft_toRightOf="@id/drop"
    app:layout_constraintRight_toLeftOf="@id/move_right"
    tools:ignore="ContentDescription"/>

  <ImageButton
    android:id="@+id/move_right"
    android:layout_width="@dimen/image_button_size"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:src="@drawable/move_right"
    android:tooltipText="@string/move_right"
    app:layout_constraintTop_toTopOf="@id/drop"
    app:layout_constraintBottom_toBottomOf="@id/drop"
    app:layout_constraintLeft_toRightOf="@id/rotate_right"
    app:layout_constraintRight_toLeftOf="@id/vertical_guideline"
    tools:ignore="ContentDescription"/>

</androidx.constraintlayout.widget.ConstraintLayout>